R exceptions handling finished